Added a module for Java virtual threads